# web_develop

./: README.md  catalog.html  category.html  contacts.html  home_html.html  main.py  pyproject.toml
